--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,7 @@
 android {
     signingConfigs {
     }
-    buildToolsVersion "28.0.2"
+    buildToolsVersion '28.0.3'
     compileSdkVersion 28
     sourceSets {
         main {
@@ -20,7 +20,7 @@ android {
     }
     defaultConfig {
         applicationId "bobabox.main"
-        minSdkVersion 9
+        minSdkVersion 27
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
